$Id$

Denora v1.4.4-SVN
-----------------

Additions
09/09/08 r314 Added option to exclude +B users from chanstats [closes #546]
09/09/08 r313 Added chan_clearmodes function to clear given chanmodes
09/09/07 r311 Added support for Nefarious 1.3 in nefarious module [closes #564]

Changes
09/09/07 r310 Disable nick tracking on NICK if ustatsregistered is enabled
09/09/03 r304 Updated GeoIP.dat

Fixes
09/09/07 r312 Fixed channel part not being parsed if reason missing
09/09/03 r307 Fixed crash in sumuser if sql query fails [closes #562]
09/09/03 r306 Implemented nefarious CM mode handling
09/09/03 r306 [1] Fixed hostname priority in nefarious nick handling
09/09/03 r305 Denora now warns and exits on missing config for Hybrid [closes #563]
09/08/24 r303 Fixed inspircd12 not sending ts6sid on ENDBURST
09/07/27 r293 [1] Fixed first channel users not getting +o on nefarious [closes #557]
09/07/02 r291 [1] Fixed nefarious not adding some exceptions at burst [closes #555]
09/05/26 r289 Fixed weekly cron removing ignored records from chanstats
09/05/17 r287 [1] Fixed nefarious MODE message handling [closes #548]
09/05/16 r286 Fixed autoop not working anymore on chanstats add [closes #547]
09/05/07 r286 Fixed segfault on broken configuration file
09/05/04 r285 Fixed inspircd12 requiring usermode +S [closes #545]
09/05/03 r283 Fixed ngircd handling of NICK and SERVER messages
09/05/03 r282 Reverted r267 which broke things on channels without modes
09/05/03 r281 Fixed crash when setting debug 2 with logchan enabled [closes #539]
09/04/27 r281 Fixed UMODE r change in Plexus3 [closes #543]
09/04/21 r279 Fixed inspircd ADDLINE using wrong timestamp [closes #542] 
09/04/21 r279 Removed handling of SVSNICK from inspircd modules [closes #540]
09/03/24 r278 Fixed crash on missing channel mode parameter

Removals
09/09/08 r314 Removed nonicktracking option as it is now useless
09/09/07 r309 Removed automerge on user quit
09/07/29 r293 Removed dm script and version.log files

Developers